3.4.0

* removed mythic rarity, epics are now purple, rares are now blue. Higher rarities are now much better than lower ones
* removed alchemy station, professions are a failed system. 
* higher rarities now have more secondary stats
* made mobs stronger at higher levels. 
* removed item rarity configs, now they are configurable as datapacks
* removed wands
* removed infusion stats and the 6 items associated with them. I feel the system is kinda lame. It was basically just a power upgrade
* reduced currency drops as a result
* increased ore spawns
I feel this is a problem caused by addition of skill, spell and talent points, player gets increasingly stronger so game gets easier the higher level you are..
You can also get stronger affixes, sets etc at high lvls. Gonna start with a 50% strength multiplier to lvl 100 mobs.
* added more dev commands. 
If you're in a dungeon and the room looks wrong (like entrance being blocked) or the there's a whole chunk missing,
 Do: /slash dev log dungeon_room when you're inside it.
And send me the log. The command should tell me what room is faulty.
* nerfed stone of corruption, now increases gear lvl by 2 and has 20% more break chance
* overlays shouldnt render in spectator mode anymore
* nerfed wis and int a bit
* reduced spell dmg gotten from stats
* buffed arrow barrage and arrow storm
* buffed higher rarity mob dmg a bit
* reduced default stat scaling
* elemental resist no longer reduces physical damage (... i found the balance problem)
* elemental resist no longer reduces ele dmg after normal resists..
In short, players with elemental resists should lose their immortality this patch.
* fix shields blocking full amount always
* items can now be modified even at max instability. But only if the config for breaking modified items is enabled.
Basically, if you enable breaking, you can modify as much as you like as long as it doesn't break, but 