@@ -4,7 +4,6 @@ import com.robertx22.mine_and_slash.database.stats.StatMod;
 import com.robertx22.mine_and_slash.database.stats.mods.flat.elemental.AllEleDmgFlat;
 import com.robertx22.mine_and_slash.database.stats.mods.flat.resources.ManaFlat;
 import com.robertx22.mine_and_slash.database.stats.mods.flat.resources.ManaRegenFlat;
-import com.robertx22.mine_and_slash.database.stats.mods.percent.MagicShieldPercent;
 import net.minecraft.util.text.TextFormatting;
 
 import java.util.Arrays;
@@ -44,7 +43,6 @@ public class Intelligence extends BaseCoreStat {
         return Arrays.asList(
             new ManaRegenFlat(),
             new ManaFlat(),
-            new MagicShieldPercent().size(StatMod.Size.LOW),
             new AllEleDmgFlat().size(StatMod.Size.LOW));
     }
 
