@@ -3,6 +3,7 @@ package com.robertx22.mine_and_slash.database.stats.types.core_stats;
 import com.robertx22.mine_and_slash.database.stats.StatMod;
 import com.robertx22.mine_and_slash.database.stats.mods.flat.resources.MagicShieldRegenFlat;
 import com.robertx22.mine_and_slash.database.stats.mods.generated.ElementalResistFlat;
+import com.robertx22.mine_and_slash.database.stats.mods.percent.MagicShieldPercent;
 import com.robertx22.mine_and_slash.uncommon.enumclasses.Elements;
 import net.minecraft.util.text.TextFormatting;
 
@@ -41,10 +42,8 @@ public class Wisdom extends BaseCoreStat {
     public List<StatMod> statsThatBenefit() {
         return Arrays.asList(
             new MagicShieldRegenFlat().size(StatMod.Size.LOW),
-            new ElementalResistFlat(Elements.Nature).size(StatMod.Size.LOW),
-            new ElementalResistFlat(Elements.Fire).size(StatMod.Size.LOW),
-            new ElementalResistFlat(Elements.Thunder).size(StatMod.Size.LOW),
-            new ElementalResistFlat(Elements.Water).size(StatMod.Size.LOW)
+            new MagicShieldPercent().size(StatMod.Size.LOW),
+            new ElementalResistFlat(Elements.Elemental).size(StatMod.Size.TINY)
         );
     }
 
