@@ -6,8 +6,11 @@
 * made mobs stronger at higher levels. 
 * removed item rarity configs, now they are configurable as datapacks
 * removed wands
+* fixed item dupe with bags with right clicking on offhand
 * removed infusion stats and the 6 items associated with them. I feel the system is kinda lame. It was basically just a power upgrade
 * reduced currency drops as a result
+* made jewerly rarer
+* made wisdom the mage defense stat while int is the offense stat
 * increased ore spawns
 I feel this is a problem caused by addition of skill, spell and talent points, player gets increasingly stronger so game gets easier the higher level you are..
 You can also get stronger affixes, sets etc at high lvls. Gonna start with a 50% strength multiplier to lvl 100 mobs.
